Correct the reference counting of userdata in closure handling

Without this we lose references on every call and eventually end up free'ing objects
while they are still in use.

https://bugzilla.gnome.org/show_bug.cgi?id=616786